[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["macros", "openssl"] }
actix-service = "2.0.2"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
flexi_logger = "0.27.4"
log = "0.4.20"
chrono = "0.4.31"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
getset = "0.1.2"
derive-new = "0.6.0"
openssl = "0.10.63"
bcrypt = "0.15.1"
mysql_async = "0.34.1"
once_cell = "1.19.0"
async-trait = "0.1.78"
diesel = { version = "2.1.5", features = ["mysql", "r2d2"] }
redis = { version = "0.24.0", features = ["cluster", "cluster-async", "aio", "tokio-comp"] }
redis_rs = "0.9.0"
jsonwebtoken = "9.3.0"
time = "0.3.34"
futures = "0.3.30"
rdkafka = "0.26"
regex = "1.10.4"
actix-cors = "0.6.0"