[package]
name = "auto_alarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.26"  
futures = "0.3"
chrono = "0.4.31"
env_logger = "0.9"
flexi_logger = "0.27.4"
log = "0.4"
log4rs = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","multipart"] }
anyhow = "1.0.79"
dotenv = "0.15.0"
rand = "0.8.5"
mysql_async = "0.34.1"
plotters = "0.3.6"
elasticsearch = "8.4.0-alpha.1"
derive-new = "0.6.0"
getset = "0.1.2"