[package]
name = "elastic_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.26" 
tokio = { version = "1.0", features = ["full"] } 
dotenv = "0.15.0"
flexi_logger = "0.27.4"
log = "0.4.20"
chrono = "0.4.31"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"
getset = "0.1.2"
derive-new = "0.6.0"
percent-encoding = "2.3.1"
openssl = "0.10.63"
futures = "0.3.30"
mysql_async = "0.34.1"